<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow MRPT 2.x to be built
     side-by-side to real ROS packages in a catkin environment.
     Real MRPT ROS packages are found elsewhere: https://github.com/mrpt-ros-pkg
-->
<package format="3">
  <name>mrpt2</name>
  <version>2.4.5</version>
  <description>Mobile Robot Programming Toolkit (MRPT) version 2.x</description>

  <author     email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>
  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>

  <url type="website">https://www.mrpt.org/</url>
  <url type="bugtracker">https://github.com/MRPT/mrpt/issues</url>

  <license>BSD</license>

  <depend>assimp-dev</depend>
  <depend>eigen</depend>
  <depend>ffmpeg</depend>
  <depend>glut</depend>
  <depend>libjpeg</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcap</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>libglfw3-dev</depend>
  <depend>libxrandr</depend>
  <depend>libxxf86vm</depend>
  <depend>libfreenect-dev</depend>
  <depend>libopenni2-dev</depend>
  <depend>octomap</depend>
  <depend>suitesparse</depend>
  <depend>wx-common</depend>
  <depend>wxwidgets</depend>
  <depend>zlib</depend>

  <!-- Deps for ros1bridge -->
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend condition="$ROS_VERSION == 1">rosbag_storage</depend>
  <depend condition="$ROS_VERSION == 2">rosbag2_storage</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
  <!-- End -->

</package>
