<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow MRPT 2.x to be built
     side-by-side to real ROS packages in a catkin/ament environment.
     Real MRPT ROS packages are found elsewhere: https://github.com/mrpt-ros-pkg
-->
<package format="3">
  <name>mrpt2</name>
  <version>2.4.6</version>
  <description>Mobile Robot Programming Toolkit (MRPT) version 2.x</description>

  <author     email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>
  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>

  <url type="website">https://www.mrpt.org/</url>
  <url type="bugtracker">https://github.com/MRPT/mrpt/issues</url>

  <license>BSD</license>

  <!-- Deps required by user code (they are in public headers)  -->
  <depend>eigen</depend>
  <depend>libglfw3-dev</depend>
  <depend>libxrandr</depend>
  <depend>libxxf86vm</depend>
  <depend>glut</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Deps required by building only -->
  <build_depend>assimp-dev</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libpcap</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libfreenect-dev</build_depend>
  <build_depend>libopenni2-dev</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>wx-common</build_depend>
  <build_depend>wxwidgets</build_depend>
  <build_depend>zlib</build_depend>

  <!-- Deps for ros1bridge/ros2bridge -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend> <!-- To run unit tests only -->
  
  <build_depend condition="$ROS_VERSION == 1">rosbag_storage</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosbag2_storage</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>


  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
  <!-- End -->

</package>
